[package]
edition = "2021"
name    = "zely_node_binding"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

futures = "0.3"



[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
